force-app/main/default/objects/Contact/fields/ConfirmYouHaveWrittenConsent__c.field-meta.xml
<CustomField>
    <fullName>ConfirmYouHaveWrittenConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to confirm if the user has written proof of GDPR consent</description>
    <inlineHelpText>Document signed or e-mail confirmation to be attached</inlineHelpText>
    <label>Written Consent Obtained</label>
    <type>Checkbox</type>
</CustomField>