force-app/main/default/objects/Contact/fields/ContactAnonimyzed__c.field-meta.xml
<CustomField>
    <fullName>ContactAnonimyzed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Technical field used for GDPR validation rule</description>
    <label>Contact Anonimyzed</label>
    <type>Checkbox</type>
</CustomField>