force-app/main/default/objects/Contact/fields/CTITechnicalMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>CTITechnicalMobilePhone__c</fullName>
    <description>Technical field that stores the 7 digits of the (Mobile Phone) so CTI can search the number in the Global Search</description>
    <label>Mobile</label>
    <length>7</length>
    <type>Text</type>
</CustomField>