force-app/main/default/objects/Contact/fields/CTITechnicalOtherPhone__c.field-meta.xml
<CustomField>
    <fullName>CTITechnicalOtherPhone__c</fullName>
    <description>Technical field that stores the 7 digits of the (Business Phone) so CTI can search the number in the Global Search</description>
    <label>Business Phone</label>
    <length>7</length>
    <type>Text</type>
</CustomField>