force-app/main/default/objects/Contact/fields/ExternalPartnersOffers__c.field-meta.xml
<CustomField>
    <fullName>ExternalPartnersOffers__c</fullName>
    <description>Field to identify if the contact allows External Partners to send offers</description>
    <label>External Partners Offers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>