force-app/main/default/objects/Contact/fields/IFCSCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>IFCSCustomerNumber__c</fullName>
    <description>IFCS number in the master data system</description>
    <externalId>true</externalId>
    <label>ifCs Customer Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>