force-app/main/default/objects/Contact/fields/IFCSOnboardDate__c.field-meta.xml
<CustomField>
    <fullName>IFCSOnboardDate__c</fullName>
    <description>Technical field used in backend</description>
    <label>ifCs Onboard Date</label>
    <type>DateTime</type>
</CustomField>