force-app/main/default/objects/Contact/fields/IFCSOnboardMessage__c.field-meta.xml
<CustomField>
    <fullName>IFCSOnboardMessage__c</fullName>
    <description>Technical field used in backend</description>
    <label>ifCs Onboard Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>