force-app/main/default/objects/Contact/fields/IFCSOnboardStatus__c.field-meta.xml
<CustomField>
    <fullName>IFCSOnboardStatus__c</fullName>
    <description>Technical field used in backend</description>
    <label>ifCS Onboard Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INACTIVE</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>PENDING</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>ACTIVE</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>FAILURE</fullName>
                <label>Activation Failure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>