force-app/main/default/objects/Contact/fields/LinkedInProfile__c.field-meta.xml
<CustomField>
    <fullName>LinkedInProfile__c</fullName>
    <description>URL for the linkedin contact</description>
    <label>LinkedIn Profile</label>
    <type>Url</type>
</CustomField>