force-app/main/default/objects/Contact/fields/RelatedActivityDate__c.field-meta.xml
<CustomField>
    <fullName>RelatedActivityDate__c</fullName>
    <description>Field used to know when was the last related activity to this contact. Used for GDPR.</description>
    <label>Related Activity Date</label>
    <type>Date</type>
</CustomField>