force-app/main/default/objects/Contact/fields/UseofAuthorizedPartners__c.field-meta.xml
<CustomField>
    <fullName>UseofAuthorizedPartners__c</fullName>
    <description>Field to identify if the information can be used by authorized partners</description>
    <label>Use of Authorized Partners</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>OMV group companies</fullName>
            </value>
            <value>
                <fullName>OMV group companies and/or OMV partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>