force-app/main/default/objects/Contact/recordTypes/CEPCardsContact.recordType-meta.xml
<RecordType>
    <fullName>CEPCardsContact</fullName>
    <active>true</active>
    <label>CEP Cards Contact</label>
</RecordType>