force-app/main/default/objects/Contact/recordTypes/FPS_Bor_Contact.recordType-meta.xml
<RecordType>
    <fullName>FPS_Bor_Contact</fullName>
    <active>true</active>
    <description>Contact record type that targets FPS Borealis POC Contacts</description>
    <label>FPS Bor Contact</label>
</RecordType>