force-app/main/default/objects/Contact/validationRules/CantChangeGeneralGDPR.validationRule-meta.xml
<ValidationRule>
    <fullName>CantChangeGeneralGDPR</fullName>
    <active>true</active>
    <description>validation rule to block from changing GDPR when Account isnt prospect</description>
    <errorConditionFormula>NOT($Setup.CEPSkipValidationRules__c.Contact__c) &amp;&amp;
TEXT(Account.Type) != &apos;Prospect&apos; &amp;&amp;  
ISCHANGED(GeneralGDPR__c) &amp;&amp;  $RecordType.DeveloperName =&apos;CEPCardsContact&apos;</errorConditionFormula>
    <errorMessage>You can&apos;t change General GDPR since the customer has a signed contract that regulates GDPR</errorMessage>
</ValidationRule>