force-app/main/default/objects/Contact/validationRules/CantCreateWithGDPRasNo.validationRule-meta.xml
<ValidationRule>
    <fullName>CantCreateWithGDPRasNo</fullName>
    <active>true</active>
    <errorConditionFormula>NOT($Setup.CEPSkipValidationRules__c.Contact__c) &amp;&amp; 
ISNEW() &amp;&amp;  
ISPICKVAL( GeneralGDPR__c  , &apos;No&apos;) &amp;&amp; $RecordType.DeveloperName =&apos;CEPCardsContact&apos;</errorConditionFormula>
    <errorMessage>You can&apos;t create a Contact with General GDPR = No, please review this field</errorMessage>
</ValidationRule>