force-app/main/default/objects/Contact/validationRules/CantEditWhenGDPRNo.validationRule-meta.xml
<ValidationRule>
    <fullName>CantEditWhenGDPRNo</fullName>
    <active>true</active>
    <description>prevent editing when gdpr picklist is no</description>
    <errorConditionFormula>NOT($Setup.CEPSkipValidationRules__c.Contact__c) &amp;&amp;
$RecordType.DeveloperName =&apos;CEPCardsContact&apos; &amp;&amp;
OR(
				TEXT(PRIORVALUE(GeneralGDPR__c)) = &apos;No&apos;,
				PRIORVALUE(ContactAnonimyzed__c) = true
)</errorConditionFormula>
    <errorMessage>This contact was anonymized due to GDPR and can&apos;t be edited</errorMessage>
</ValidationRule>